--- a/posts/richard-hamming-success.mdx
+++ b/posts/richard-hamming-success.mdx
@@ -4,13 +4,6 @@ date: 2024-01-22
 description:
   'Dr Richard Hamming insights for success in your career'
 ---
-
-# You and Your Research
-
-## Speaker
-- **Dr. Richard W. Hamming**
-
-## Lecture Overview
 **Title:** You and Your Research  
 **Link:** [Watch on YouTube](https://www.youtube.com/watch?v=a1zDuOPkMSw)  
 **Description:** In this influential lecture, Dr. Richard W. Hamming discusses the principles of success in research and beyond, drawing from his extensive career experiences at Los Alamos and Bell Labs. He delves into the importance of working on significant problems, the role of perseverance and hard work, and the necessity of self-belief and the prepared mind in achieving greatness.
@@ -60,4 +53,4 @@ description:
 
 ---
 
-*This summary is based on Dr. Richard W. Hamming's lecture "You and Your Research". For more detailed insights, viewers are encouraged to review the full transcript or watch the lecture recordings.*
+*Summary generated with AI - Will go through this and edit myself...*
